force-app/main/default/objects/Loan_Application__c/fields/Primary_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Primary_Borrower__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>main borrower of the loan</description>
    <label>Primary Borrower</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>