force-app/main/default/objects/Loan_Application__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <description>Risk rating score calculated for the loan application (0-100).</description>
    <label>Risk Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>